@@ -8,3 +8,4 @@
  29-Aug-2019 V0.16 add module EnzymeDatabaseProvider()
  23-Nov-2019 V0.17 Move pipeline to py38
  24-Nov-2019 V0.18 add normalize() and exists() methods
+  8-Dec-2019 V0.19 parse history records looking for EC replacements
